...
                                    e.definition.checklists[it]
                                        ?: error("Checklist template is missing")
                                }
                        val options =
                            when (kind) {
                                "yesno",
                                "confirm" -> listOf("Yes", "No")
                                "text",
                                "number" -> emptyList()
                                else ->
                                    (template?.items?.map {
                                            (if (it.required) "" else "?") + it.label
                                        } ?: f("OPTIONS", "Option 1|Option 2").split('|'))
...
